--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -9,7 +9,13 @@
 	"compatibility_date": "2025-04-03",
 	"observability": {
 		"enabled": true
-	}
+	},
+	"kv_namespaces": [
+		{
+			"binding": "PREFS",
+			"id": "6f99e7c8d72c4d9faaafd4434191742d"
+		}
+	]
 	/**
 	 * Smart Placement
 	 * Docs: https://developers.cloudflare.com/workers/configuration/smart-placement/#smart-placement
